update doctor component

--- a/HHIS_Frontend/HHISIT2018144/package.json
+++ b/HHIS_Frontend/HHISIT2018144/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "angular-particle": "^1.0.4",
+    "angular-particle-updated": "^1.0.4-1",
+    "ng-particles": "^2.43.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "tsparticles": "^1.43.1",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
