--- a/HHIS_Frontend/HHISIT2018144/package.json
+++ b/HHIS_Frontend/HHISIT2018144/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
     "angular-particle": "^1.0.4",
     "angular-particle-updated": "^1.0.4-1",
+    "chart.js": "^3.7.1",
     "ng-particles": "^2.43.1",
+    "ng2-charts": "^3.0.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "tsparticles": "^1.43.1",
